normalizo estilos css en general, agrego estilos a header

--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./index.css">
     <title>FunkoShop</title>
 </head>
 
 <body>
     <header>
-        <picture><a href="">
-                <img src="./assets/branding/logo_light_horizontal.svg" alt="Logo Funkoshop" />
+        <picture class="cont-logo"><a href="">
+                <img src="./assets/branding/logo_light_horizontal.svg" alt="Logo Funkoshop" class="logo" />
             </a></picture>
 
-        <nav>
-            <ul>
+        <nav class="nav-header">
+            <ul class="list-nav-header">
                 <li><a href="">SHOP</a></li>
                 <li><a href="">CONTACTO</a></li>
                 <li><a href="">LOGIN</a></li>
