--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <picture class="cont-logo"><a href="">
+        <picture><a href="">
                 <img src="./assets/branding/logo_light_horizontal.svg" alt="Logo Funkoshop" class="logo" />
             </a></picture>
 
@@ -26,10 +26,16 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h3>Nuevos Ingresos</h3>
-            <p>Descubrí el próximo Funko Pop de tu colección</p>
-            <a>SHOP</a>
+        <section class="seccion-nuevos-ingresos">
+            <div class="cont-banner">
+                <article class="cont-nuevos-ingresos">
+                    <h3 class="titulo-nuevos-ingresos">Nuevos Ingresos</h3>
+                    <p>Descubrí el próximo Funko Pop de tu colección</p>
+                    <button class="link-shop">SHOP</button>
+                </article>
+            </div>
+
+
         </section>
         <section>
 
