modifico estructura y agrego estilos a sección colecciones

--- a/index.html
+++ b/index.html
@@ -37,39 +37,50 @@
 
 
         </section>
-        <section>
+        <section class="seccion-colecciones">
 
-            <article>
-                <h3>STAR WARS & THE MANDALORIAN
-                </h3>
-                <p>Disfruta de una saga que sigue agregando personajes a su colección.</p>
-                <hr>
-                <a>VER COLECCIÓN</a>
-            </article>
-            <picture><img src="./assets/star-wars/baby-yoda-1.webp" alt="Baby Yoda"> </picture>
-        </section>
-        <section>
-            <picture><img src="./assets/pokemon/vulpix-1.webp" alt="Vulpix"> </picture>
-            <article>
-                <h3>POKEMON INDIGO
-                </h3>
-                <p>Atrapa todos los que puedas y disfruta de una colección llena de amigos.</p>
-                <hr>
-                <a>VER COLECCIÓN</a>
+            <article class="articulo-seccion-colecciones">
+                <div class="articulo-detalle">
+                    <h3 class="articulo-detalle-titulo">STAR WARS & THE MANDALORIAN
+                    </h3>
+                    <p class="articulo-detalle-descripcion">Disfruta de una saga que sigue agregando personajes a su
+                        colección.</p>
+                    <hr>
+                    <button class="btn-ver-coleccion">VER COLECCIÓN</button>
+
+                </div>
+                <picture class="cont-img-articulo"><img src="./assets/star-wars/baby-yoda-1.webp" alt="Baby Yoda"
+                        class="img-articulo"> </picture>
             </article>
 
-        </section>
-        <section>
-
-            <article>
-                <h3>HARRY POTTER
-                </h3>
-                <p>Revive los recuerdos de una saga llena de magia y encanto</p>
-                <hr>
-                <a>VER COLECCIÓN</a>
+            <article class="articulo-seccion-colecciones">
+                <picture class="cont-img-articulo"><img src="./assets/pokemon/vulpix-1.webp" alt="Vulpix"
+                        class="img-articulo"> </picture>
+                <div class="articulo-detalle">
+                    <h3 class="articulo-detalle-titulo">POKEMON INDIGO
+                    </h3>
+                    <p class="articulo-detalle-descripcion">Atrapa todos los que puedas y disfruta de una colección
+                        llena de amigos.</p>
+                    <hr class="hr">
+                    <button class="btn-ver-coleccion">VER COLECCIÓN</button>
+                </div>
             </article>
-            <picture><img src="./assets/harry-potter/snape-patronus-1.webp" alt="Snape patronus"> </picture>
+            <article class="articulo-seccion-colecciones">
+                <div class="articulo-detalle">
+                    <h3 class="articulo-detalle-titulo">HARRY POTTER
+                    </h3>
+                    <p class="articulo-detalle-descripcion"> class="articulo-detalle-descripcion"Revive los recuerdos de
+                        una saga llena de magia y encanto</p>
+                    <hr>
+                    <button class="btn-ver-coleccion">VER COLECCIÓN</button>
+                </div>
+                <picture class="cont-img-articulo"><img src="./assets/harry-potter/snape-patronus-1.webp"
+                        alt="Snape patronus" class="img-articulo"> </picture>
+            </article>
+
         </section>
+
+
         <section>
             <h2>últimos lazamientos</h2>
             <ul>
