agrego estilos a Footer

--- a/index.html
+++ b/index.html
@@ -132,15 +132,19 @@
         </section>
     </main>
     <footer>
-        <nav>
-            <ul>
-                <li><a href="">SHOP</a></li>
-                <li><a href="">INGRESAR</a></li>
-                <li><a href="">CONTACTO</a></li>
-            </ul>
-        </nav>
-        <img src="./assets/branding/isotype.svg" alt="" />
-        <p>All rights reserved 2023 - Funkoshop &copy;</p>
+        <div class="cont-nav-footer">
+            <nav class="nav-footer">
+
+                <ul class="list-nav-footer">
+                    <li><a href="">SHOP</a></li>
+                    <li><a href="">INGRESAR</a></li>
+                    <li><a href="">CONTACTO</a></li>
+                </ul>
+            </nav>
+            <img src="./assets/branding/isotype.svg" alt="logo-funkoshop" class="logo-funkoshop-footer" />
+        </div>
+
+        <p class="copy-footer">All rights reserved 2023 - Funkoshop &copy;</p>
     </footer>
 </body>
 
