agrego select en nav del header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
 
         <nav class="nav-header">
             <ul class="list-nav-header">
-                <li><a href="">SHOP</a></li>
+                <li>
+                    <select name="select-nav-header" id="select-nav-header" class="select-nav-header">
+                        <option value="shop"><a href="">SHOP</a></option>
+                        <option value="shop"><a href="">SHOP</a></option>
+                        <option value="shop"><a href="">SHOP</a></option>
+                    </select>
+                </li>
                 <li><a href="">CONTACTO</a></li>
                 <li><a href="">LOGIN</a></li>
                 <li>
