agrego linea divisoria en articulos de sección colecciones

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </h3>
                     <p class="articulo-detalle-descripcion">Disfruta de una saga que sigue agregando personajes a su
                         colección.</p>
-                    <hr>
+                    <img src="./assets/branding/Line 3.svg" alt="" class="linea-divisoria">
                     <button class="btn-ver-coleccion">VER COLECCIÓN</button>
 
                 </div>
@@ -67,7 +67,7 @@
                     </h3>
                     <p class="articulo-detalle-descripcion">Atrapa todos los que puedas y disfruta de una colección
                         llena de amigos.</p>
-                    <hr class="hr">
+                    <img src="./assets/branding/Line 3.svg" alt="" class="linea-divisoria">
                     <button class="btn-ver-coleccion">VER COLECCIÓN</button>
                 </div>
             </article>
@@ -77,7 +77,7 @@
                     </h3>
                     <p class="articulo-detalle-descripcion"> class="articulo-detalle-descripcion"Revive los recuerdos de
                         una saga llena de magia y encanto</p>
-                    <hr>
+                    <img src="./assets/branding/Line 3.svg" alt="" class="linea-divisoria">
                     <button class="btn-ver-coleccion">VER COLECCIÓN</button>
                 </div>
                 <picture class="cont-img-articulo"><img src="./assets/harry-potter/snape-patronus-1.webp"
