agrego estilos a la paginación de shop

--- a/pages/shop.html
+++ b/pages/shop.html
@@ -184,16 +184,16 @@
                 </li>
             </ul>
             <div class="paginado">
-                <ul>
-                    <li><a href="">
+                <ul class="lista-paginado">
+                    <li class=""><a href="" class="item-lista-paginado">
                             < </a>
                     </li>
-                    <li><a href="">1</a></li>
-                    <li><a href="">2</a></li>
-                    <li><a href="">...</a></li>
-                    <li><a href="">9</a></li>
-                    <li><a href="">10</a></li>
-                    <li><a href="">
+                    <li class=""><a href="" class="item-lista-paginado">1</a></li>
+                    <li class=""><a href="" class="item-lista-paginado">2</a></li>
+                    <li class=""><a href="" class="item-lista-paginado">...</a></li>
+                    <li class=""><a href="" class="item-lista-paginado">9</a></li>
+                    <li class=""><a href="" class="item-lista-paginado">10</a></li>
+                    <li class=""><a href="" class="item-lista-paginado">
                             > </a></li>
                 </ul>
             </div>
