--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>FunkoShop</title>
 </head>
 
-<body>
+<body class="body-home">
     <header>
         <picture><a href="">
                 <img src="./assets/branding/logo_light_horizontal.svg" alt="Logo Funkoshop" class="logo" />
