agrego class container para normalizar estilos

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
         </section>
-        <section class="seccion-colecciones">
+        <section class="container seccion-colecciones">
 
             <article class="articulo-seccion-colecciones">
                 <div class="articulo-detalle">
@@ -87,7 +87,7 @@
         </section>
 
 
-        <section class="seccion-ultimos-lanzamientos">
+        <section class="container seccion-ultimos-lanzamientos">
             <h2 class="titulo-seccion">últimos lazamientos</h2>
             <ul class="lista-ultimos-lanzamientos">
                 <li>
