--- a/pages/shop.html
+++ b/pages/shop.html
@@ -9,7 +9,7 @@
     <title>Shop - FunkoShop</title>
 </head>
 
-<body class="body-shop">
+<body class="container body-shop">
     <aside class="aside-shop">
         <form action="" class="form-filtros-shop">
             <label for="buscar" class="filtros-shop-titulo">BUSCAR</label>
