--- a/index.html
+++ b/index.html
@@ -17,16 +17,20 @@
         <nav class="nav-header">
             <ul class="list-nav-header">
                 <li>
-                    <select name="select-nav-header" id="select-nav-header" class="select-nav-header">
-                        <option value="shop"><a href="">SHOP</a></option>
-                        <option value="shop"><a href="">SHOP</a></option>
-                        <option value="shop"><a href="">SHOP</a></option>
+
+                    <select name="select-nav-header" id="select-nav-header" onchange="window.location.href = this.value"
+                        class="select-nav-header">
+                        <option value="./pages/shop.html">SHOP</option>
+                        <option value="./pages/register.html">opcion 2</option>
+                        <option value="./pages/login.html">opcion 3</option>
                     </select>
+
                 </li>
                 <li><a href="">CONTACTO</a></li>
-                <li><a href="">LOGIN</a></li>
+                <li><a href="./pages/login.html">LOGIN</a></li>
                 <li>
-                    <a href=""><img src="./assets/icons/cart-icon.svg" alt="" /> </a>
+                    <a href="./pages/carrito.html"><img src="./assets/icons/cart-icon.svg"
+                            alt="Icono de carrito de compras" /> </a>
                 </li>
             </ul>
         </nav>
@@ -37,7 +41,7 @@
                 <article class="cont-nuevos-ingresos">
                     <h3 class="titulo-nuevos-ingresos">Nuevos Ingresos</h3>
                     <p>Descubrí el próximo Funko Pop de tu colección</p>
-                    <button class="link-shop">SHOP</button>
+                    <button class="link-shop" onclick="window.location.href='./pages/shop.html'">SHOP</button>
                 </article>
             </div>
 
@@ -142,8 +146,8 @@
             <nav class="nav-footer">
 
                 <ul class="list-nav-footer">
-                    <li><a href="">SHOP</a></li>
-                    <li><a href="">INGRESAR</a></li>
+                    <li><a href="./pages/shop.html">SHOP</a></li>
+                    <li><a href="./pages/login.html">INGRESAR</a></li>
                     <li><a href="">CONTACTO</a></li>
                 </ul>
             </nav>
