agrego estilos a seccion item

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="body-home">
     <header>
-        <picture><a href="">
+        <picture><a href="/index.html">
                 <img src="./assets/branding/logo_light_horizontal.svg" alt="Logo Funkoshop" class="logo" />
             </a></picture>
 
@@ -79,7 +79,7 @@
                 <div class="articulo-detalle">
                     <h3 class="articulo-detalle-titulo">HARRY POTTER
                     </h3>
-                    <p class="articulo-detalle-descripcion"> class="articulo-detalle-descripcion"Revive los recuerdos de
+                    <p class="articulo-detalle-descripcion"> Revive los recuerdos de
                         una saga llena de magia y encanto</p>
                     <img src="./assets/branding/Line 3.svg" alt="" class="linea-divisoria">
                     <button class="btn-ver-coleccion">VER COLECCIÓN</button>
