--- a/pages/item.html
+++ b/pages/item.html
@@ -4,32 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="../styles/item.css">
     <title>Item - FunkoShop</title>
 </head>
 
 <body>
     <main>
-        <section class="section-item">
+        <section class="container section-item">
             <article class="article-card-item">
                 <picture><img src="../assets/star-wars/baby-yoda-1.webp" alt="Baby Yoda"> </picture>
                 <div class="contenedor-detalles-item">
-                    <p class="coleccion-item">STAR WARS</p>
+                    <p class="subtitulo-item">STAR WARS</p>
                     <h3 class="titulo-item">BABY YODA BLUEBALL
                     </h3>
                     <p class="descripcion-item">Figura coleccionable de Baby Yoda (Grogu) - The Mandalorian Saga,
                         edición limitada.</p>
                     <p class="precio-item">$ 1799,99</p>
                     <div class="contenedor-agregar-item">
-                        <div>
+                        <div class="cont-cantidad">
                             <span class="span-cantidad-item">0</span>
-                            <div>
+                            <div class="cont-botones-cantidad">
                                 <button class="button-sumar-item">+</button>
                                 <button class="button-restar-item">-</button>
                             </div>
                         </div>
                         <button class="button-agregar-item">Agregar al carrito</button>
                     </div>
-                    <a class="link-pagos-item">Ver métodos de pago - 3 CUOTAS SIN INTERÉS</a>
+                    <a class="link-pagos-item"> <u>Ver métodos de pago</u> - 3 CUOTAS SIN INTERÉS</a>
                 </div>
             </article>
 
