agrego estilos a seccion Productos relacionados, modifico propiedades de cards

--- a/pages/item.html
+++ b/pages/item.html
@@ -40,46 +40,48 @@
 
         </section>
         <section class="section-productos-relacionados">
-            <h2>PRODUCTOS RELACIONADOS</h2>
-            <ul>
+            <h2 class="titulo-seccion">PRODUCTOS RELACIONADOS</h2>
+            <ul class="lista-ultimos-lanzamientos">
                 <li>
-                    <article>
+                    <article class="card-producto">
                         <a href="">
-                            <picture>
-                                <img src="../assets/star-wars/trooper-1.webp" alt="STORMTROOPER LIGHTSABER">
+                            <picture class="cont-img-card-producto">
+                                <img src="../assets/star-wars/trooper-1.webp" alt="STORMTROOPER LIGHTSABER"
+                                    class="img-card-producto">
                             </picture>
-                            <p>STAR WARS</p>
-                            <h4>STORMTROOPER LIGHTSABER</h4>
-                            <p>$ 1799,99</p>
-                            <p>3 CUOTAS SIN INTERÉS</p>
+                            <p class="subtitulo-card-producto">STAR WARS</p>
+                            <h4 class="titulo-card-producto">STORMTROOPER LIGHTSABER</h4>
+                            <p class="precio-card-producto">$ 1799,99</p>
+                            <p class="cuotas-card-producto">3 CUOTAS SIN INTERÉS</p>
 
                         </a>
                     </article>
                 </li>
                 <li>
-                    <article>
+                    <article class="card-producto">
                         <a href="">
-                            <picture>
-                                <img src="../assets/pokemon/pidgeotto-1.webp" alt="PIDGEOTTO">
+                            <picture class="cont-img-card-producto">
+                                <img src="../assets/pokemon/pidgeotto-1.webp" alt="PIDGEOTTO" class="img-card-producto">
                             </picture>
-                            <p>POKEMON</p>
-                            <h4>PIDGEOTTO</h4>
-                            <p>$ 1799,99</p>
-                            <p>3 CUOTAS SIN INTERÉS</p>
+                            <p class="subtitulo-card-producto">POKEMON</p>
+                            <h4 class="titulo-card-producto">PIDGEOTTO</h4>
+                            <p class="precio-card-producto">$ 1799,99</p>
+                            <p class="cuotas-card-producto">3 CUOTAS SIN INTERÉS</p>
 
                         </a>
                     </article>
                 </li>
                 <li>
-                    <article>
+                    <article class="card-producto">
                         <a href="">
-                            <picture>
-                                <img src="../assets/harry-potter/luna-1.webp" alt="LUNA LOVEGOOD LION MASK">
+                            <picture class="cont-img-card-producto">
+                                <img src="../assets/harry-potter/luna-1.webp" alt="LUNA LOVEGOOD LION MASK"
+                                    class="img-card-producto">
                             </picture>
-                            <p>HARRY POTTER</p>
-                            <h4>LUNA LOVEGOOD LION MASK</h4>
-                            <p>$ 1799,99</p>
-                            <p>3 CUOTAS SIN INTERÉS</p>
+                            <p class="subtitulo-card-producto">HARRY POTTER</p>
+                            <h4 class="titulo-card-producto">LUNA LOVEGOOD LION MASK</h4>
+                            <p class="precio-card-producto">$ 1799,99</p>
+                            <p class="cuotas-card-producto">3 CUOTAS SIN INTERÉS</p>
 
                         </a>
                     </article>
