agrego padding bottom a sección Productos relacionados

--- a/pages/item.html
+++ b/pages/item.html
@@ -39,7 +39,7 @@
 
 
         </section>
-        <section class="section-productos-relacionados">
+        <section class="container section-productos-relacionados">
             <h2 class="titulo-seccion">PRODUCTOS RELACIONADOS</h2>
             <ul class="lista-ultimos-lanzamientos">
                 <li>
