agrego estilos al resumen de la page carrito

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -72,23 +72,24 @@
             <h2 class="titulo-seccion titulo-seccion-resumen">RESUMEN</h2>
             <div class="cont-detalle-resumen">
                 <div class="cont-item-resumen">
-                    <p>CANTIDAD DE ELEMENTOS</p>
-                    <p>3</p>
+                    <p class="subtitulo-resumen">CANTIDAD DE ELEMENTOS</p>
+                    <p class="valores-resumen">3</p>
                 </div>
                 <div class="cont-item-resumen">
-                    <p>SUBTOTAL</p>
-                    <p>$5399.97</p>
+                    <p class="subtitulo-resumen">SUBTOTAL</p>
+                    <p class="valores-resumen">$5399.97</p>
                 </div>
                 <div class="cont-item-resumen">
-                    <p>ENVIO</p>
-                    <p>$0.00</p>
+                    <p class="subtitulo-resumen">ENVIO</p>
+                    <p class="valores-resumen">$0.00</p>
                 </div>
+                <img src="../assets/branding/Line 3.svg" alt="" class="linea-divisoria">
                 <div class="cont-item-resumen">
-                    <p>TOTAL</p>
-                    <p>$5399.97</p>
+                    <p class="subtitulo-resumen-total">TOTAL</p>
+                    <p class="valores-resumen valor-resumen-total">$5399.97</p>
                 </div>
             </div>
-            <a href="">IR A PAGAR</a>
+            <a href="" class="link-pago">IR A PAGAR</a>
         </div>
     </main>
 </body>
