--- a/pages/admin.html
+++ b/pages/admin.html
@@ -32,17 +32,17 @@
             </form>
         </section>
         <section>
-            <div>
-                <h2>LISTADO DE PRODUCTOS</h2>
-                <div>
-                    <p>AGREGAR</p>
-                    <button>+</button>
+            <div class="cont-titulo">
+                <h2 class="titulo-seccion">LISTADO DE PRODUCTOS</h2>
+                <div class="cont-agregar-producto">
+                    <p class="agregar">AGREGAR</p>
+                    <button class="btn-agregar"></button>
                 </div>
             </div>
             <div>
-                <ul>
+                <ul class="cont-titulos-grid">
                     <li>
-                        <h3>UD</h3>
+                        <h3>ID</h3>
                     </li>
                     <li>
                         <h3>Código</h3>
@@ -55,133 +55,146 @@
                     </li>
                 </ul>
                 <article>
-                    <ul>
+                    <ul class="cont-articulo">
                         <li>1</li>
                         <li>STW001001</li>
                         <li>Baby Yoda Blueball</li>
                         <li>STAR WARS</li>
-                        <li> <button><img src="../assets/icons/edit_pencil.svg" alt=""></button> </li>
-                        <li> <button><img src="../assets/icons/delete_trash.svg" alt=""></button> </li>
+                        <li class="cont-btns"> <button class="btn-editar"></button>
+                            <button class="btn-eliminar"></button>
+                        </li>
                     </ul>
                 </article>
                 <article>
-                    <ul>
+                    <ul class="cont-articulo">
                         <li>2</li>
                         <li>STW001001</li>
                         <li>Baby Yoda Blueball</li>
                         <li>STAR WARS</li>
-                        <li> <button><img src="../assets/icons/edit_pencil.svg" alt=""></button> </li>
-                        <li> <button><img src="../assets/icons/delete_trash.svg" alt=""></button> </li>
+                        <li class="cont-btns"> <button class="btn-editar"></button>
+                            <button class="btn-eliminar"></button>
+                        </li>
                     </ul>
                 </article>
                 <article>
-                    <ul>
+                    <ul class="cont-articulo">
                         <li>3</li>
                         <li>STW001001</li>
                         <li>Baby Yoda Blueball</li>
                         <li>STAR WARS</li>
-                        <li> <button><img src="../assets/icons/edit_pencil.svg" alt=""></button> </li>
-                        <li> <button><img src="../assets/icons/delete_trash.svg" alt=""></button> </li>
+                        <li class="cont-btns"> <button class="btn-editar"></button>
+                            <button class="btn-eliminar"></button>
+                        </li>
                     </ul>
                 </article>
                 <article>
-                    <ul>
+                    <ul class="cont-articulo">
                         <li>4</li>
                         <li>STW001001</li>
                         <li>Baby Yoda Blueball</li>
                         <li>STAR WARS</li>
-                        <li> <button><img src="../assets/icons/edit_pencil.svg" alt=""></button> </li>
-                        <li> <button><img src="../assets/icons/delete_trash.svg" alt=""></button> </li>
+                        <li class="cont-btns"> <button class="btn-editar"></button>
+                            <button class="btn-eliminar"></button>
+                        </li>
                     </ul>
                 </article>
                 <article>
-                    <ul>
+                    <ul class="cont-articulo">
                         <li>5</li>
                         <li>STW001001</li>
-                        <li>Baby Yoda Blueball</li>
-                        <li>STAR WARS</li>
-                        <li> <button><img src="../assets/icons/edit_pencil.svg" alt=""></button> </li>
-                        <li> <button><img src="../assets/icons/delete_trash.svg" alt=""></button> </li>
+                        <li>Luna Lovegood Lion Mask</li>
+                        <li>HARRY POTTER</li>
+                        <li class="cont-btns"> <button class="btn-editar"></button>
+                            <button class="btn-eliminar"></button>
+                        </li>
                     </ul>
                 </article>
                 <article>
-                    <ul>
+                    <ul class="cont-articulo">
                         <li>6</li>
                         <li>STW001001</li>
                         <li>Baby Yoda Blueball</li>
                         <li>STAR WARS</li>
-                        <li> <button><img src="../assets/icons/edit_pencil.svg" alt=""></button> </li>
-                        <li> <button><img src="../assets/icons/delete_trash.svg" alt=""></button> </li>
+                        <li class="cont-btns"> <button class="btn-editar"></button>
+                            <button class="btn-eliminar"></button>
+                        </li>
                     </ul>
                 </article>
                 <article>
-                    <ul>
+                    <ul class="cont-articulo">
                         <li>7</li>
                         <li>STW001001</li>
                         <li>Baby Yoda Blueball</li>
                         <li>STAR WARS</li>
-                        <li> <button><img src="../assets/icons/edit_pencil.svg" alt=""></button> </li>
-                        <li> <button><img src="../assets/icons/delete_trash.svg" alt=""></button> </li>
+                        <li class="cont-btns"> <button class="btn-editar"></button>
+                            <button class="btn-eliminar"></button>
+                        </li>
                     </ul>
                 </article>
                 <article>
-                    <ul>
+                    <ul class="cont-articulo">
                         <li>8</li>
                         <li>STW001001</li>
                         <li>Baby Yoda Blueball</li>
                         <li>STAR WARS</li>
-                        <li> <button><img src="../assets/icons/edit_pencil.svg" alt=""></button> </li>
-                        <li> <button><img src="../assets/icons/delete_trash.svg" alt=""></button> </li>
+                        <li class="cont-btns"> <button class="btn-editar"></button>
+                            <button class="btn-eliminar"></button>
+                        </li>
                     </ul>
                 </article>
                 <article>
-                    <ul>
+                    <ul class="cont-articulo">
                         <li>9</li>
                         <li>STW001001</li>
                         <li>Baby Yoda Blueball</li>
                         <li>STAR WARS</li>
-                        <li> <button><img src="../assets/icons/edit_pencil.svg" alt=""></button> </li>
-                        <li> <button><img src="../assets/icons/delete_trash.svg" alt=""></button> </li>
+                        <li class="cont-btns"> <button class="btn-editar"></button>
+                            <button class="btn-eliminar"></button>
+                        </li>
                     </ul>
                 </article>
                 <article>
-                    <ul>
+                    <ul class="cont-articulo">
                         <li>10</li>
                         <li>STW001001</li>
                         <li>Baby Yoda Blueball</li>
                         <li>STAR WARS</li>
-                        <li> <button><img src="../assets/icons/edit_pencil.svg" alt=""></button> </li>
-                        <li> <button><img src="../assets/icons/delete_trash.svg" alt=""></button> </li>
+                        <li class="cont-btns"> <button class="btn-editar"></button>
+                            <button class="btn-eliminar"></button>
+                        </li>
                     </ul>
                 </article>
                 <article>
-                    <ul>
+                    <ul class="cont-articulo">
                         <li>11</li>
                         <li>STW001001</li>
                         <li>Baby Yoda Blueball</li>
                         <li>STAR WARS</li>
-                        <li> <button><img src="../assets/icons/edit_pencil.svg" alt=""></button> </li>
-                        <li> <button><img src="../assets/icons/delete_trash.svg" alt=""></button> </li>
+                        <li class="cont-btns"> <button class="btn-editar"></button>
+                            <button class="btn-eliminar"></button>
+                        </li>
                     </ul>
                 </article>
                 <article>
-                    <ul>
+                    <ul class="cont-articulo">
                         <li>12</li>
                         <li>STW001001</li>
                         <li>Baby Yoda Blueball</li>
                         <li>STAR WARS</li>
-                        <li> <button><img src="../assets/icons/edit_pencil.svg" alt=""></button> </li>
-                        <li> <button><img src="../assets/icons/delete_trash.svg" alt=""></button> </li>
+                        <li class="cont-btns"> <button class="btn-editar"></button>
+                            <button class="btn-eliminar"></button>
+                        </li>
                     </ul>
                 </article>
                 <article>
-                    <ul>
+                    <ul class="cont-articulo">
                         <li>13</li>
                         <li>STW001001</li>
                         <li>Baby Yoda Blueball</li>
                         <li>STAR WARS</li>
-                        <li> <button><img src="../assets/icons/edit_pencil.svg" alt=""></button> </li>
-                        <li> <button><img src="../assets/icons/delete_trash.svg" alt=""></button> </li>
+                        <li class="cont-btns"> <button class="btn-editar"></button>
+                            <button class="btn-eliminar"></button>
+                        </li>
                     </ul>
                 </article>
             </div>
