modifico tamaño de columna perteneciente a ID

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -11,7 +11,7 @@
 
 <body>
     <main class="container main-carrito">
-        <h2 class="titulo-seccion">CARRITO DE COMPRAS</h2>
+        <h2 class="titulo-seccion titulo-carrito">CARRITO DE COMPRAS</h2>
         <div class="container cont-subtitulo-carrito">
             <h3 class="subtitulo-carrito subtitulo-carrito-detalle">DETALLE DE PRODUCTO</h3>
             <h3 class="subtitulo-carrito subtitulo-carrito-cantidad">CANTIDAD</h3>
