agrego estilos a page create

--- a/pages/shop.html
+++ b/pages/shop.html
@@ -13,7 +13,7 @@
     <aside class="aside-shop">
         <form action="" class="form-filtros-shop">
             <label for="buscar" class="filtros-shop-titulo">BUSCAR</label>
-            <input type="text" name="buscar" id="" class="input input-filtros-shop" placeholder="Item o categoria">
+            <input type="text" name="buscar" id="" class="input-filtros-shop" placeholder="Item o categoria">
             <label for="ordenar" class="input filtros-shop-titulo">ORDENAR POR</label>
             <select name="ordenar" id="" class="input-filtros-shop">
                 <option value="mayorAMenor">Mayor a menor</option>
