--- a/pages/create.html
+++ b/pages/create.html
@@ -4,47 +4,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="../styles/create.css">
     <title>Create - Funkoshop</title>
 </head>
 
 <body>
-    <main>
-        <h2>CREAR NUEVO ITEM</h2>
-        <form action="">
-            <div>
-                <label for="categoria">Categoria</label>
-                <select name="categoria" id="">
-                    <option value="">Seleccionar</option>
-                    <option value="">1</option>
-                    <option value="">2</option>
-                    <option value="">3</option>
-                </select>
-                <label for="licencia">Licencia</label>
-                <select name="licencia" id="">
-                    <option value="">Seleccionar</option>
-                    <option value="">1</option>
-                    <option value="">2</option>
-                    <option value="">3</option>
-                </select>
+    <main class="create-main">
+        <h2 class="titulo-seccion">CREAR NUEVO ITEM</h2>
+        <form action="" class="create-form">
+            <div class="cont-categ-licencia">
+                <div>
+                    <label for="categoria" class="form-label">Categoria</label>
+                    <select name="categoria" id="" class="select-form">
+                        <option value="">Seleccionar</option>
+                        <option value="">1</option>
+                        <option value="">2</option>
+                        <option value="">3</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="licencia" class="form-label">Licencia</label>
+                    <select name="licencia" id="" class="select-form">
+                        <option value="">Seleccionar</option>
+                        <option value="">1</option>
+                        <option value="">2</option>
+                        <option value="">3</option>
+                    </select>
+
+                </div>
             </div>
             <div>
-                <label for="nombre-producto">Nombre del producto:</label>
-                <input type="text" name="nombre-producto" id="" placeholder="Kakashi Hatake Shippuden Saga">
+                <label for="nombre-producto" class="form-label">Nombre del producto:</label>
+                <input type="text" name="nombre-producto" id="" class="form-input"
+                    placeholder="Kakashi Hatake Shippuden Saga">
             </div>
             <textarea name="" id="" cols="30" rows="10" placeholder="Descripción del producto"></textarea>
-            <div>
-                <label for="sku">SKU:</label>
-                <input type="text" name="sku" id="" placeholder="SSK111AB001">
-                <label for="precio">Precio:</label>
-                <input type="number" name="precio" placeholder="$0.000,00">
-                <label for="stock">Stock:</label>
-                <input type="number" name="stock" placeholder="0">
+            <div class="cont-sku-precio-stock">
+                <label for="sku" class="form-label">SKU:</label>
+                <input type="text" name="sku" id="" class="form-input" placeholder="SSK111AB001">
+                <label for="precio" class="form-label">Precio:</label>
+                <input type="number" name="precio" class="form-input" placeholder="$0.000,00">
+                <label for="stock" class="form-label">Stock:</label>
+                <input type="number" name="stock" class="input-stock" placeholder="0">
             </div>
-            <div>
-                <label for="descuento">Descuento:</label>
-                <input type="number" name="descuento" id="" placeholder="0%">
-                <label for="cuotas">Cuotas</label>
-                <select name="cuotas" id="">
+            <div class="cont-desc-cuotas">
+                <label for="descuento" class="form-label">Descuento:</label>
+                <input type="number" name="descuento" id="" class="form-input input-desc" placeholder="0%">
+                <label for="cuotas" class="form-label">Cuotas</label>
+                <select name="cuotas" id="" class="select-form">
                     <option value="">3 Cuotas sin interés</option>
                     <option value="">2</option>
                     <option value="">3</option>
@@ -52,12 +60,12 @@
 
             </div>
             <div>
-                <label for="imagenes">Imágenes</label>
-                <input type="file" name="imagenes" id="">
+                <label for="imagenes" class="form-label">Imágenes:</label>
+                <input type="file" name="imagenes" id="" class="input-imagenes">
             </div>
             <div>
-                <button>Agregar Producto</button>
-                <button>Limpiar</button>
+                <button class="btn-form">Agregar Producto</button>
+                <button class="btn-form">Limpiar</button>
             </div>
 
         </form>
